<resources>
    <string name="app_name">Komment</string>
    <string name="home">Home</string>
    <string name="folder">Folder</string>
    <string name="account">Account</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_icon">App Icon</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="logout">Logout</string>
    <string name="content">Content</string>
    <string name="title">Title</string>
    <string name="saveDialog">Do you want to save your changes?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="discardChanges">Discard Changes</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="passwordsDoNotMatch">Passwords do not match</string>
    <string name="user_exists">User already exists.</string>\
    <string name="username_too_short">Username is too short</string>
    <string name="password_too_short">Password is too short</string>
    <string name="loading_notes">Loading notes…</string>
    <string name="server_error">Server Error. Try again later</string>
    <string name="no_notes">You have 0 notes. Create one!</string>
    <string name="no_internet">No internet connection!</string>
    <string name="settings">Settings</string>
    <string name="confirm_delete">Do you want to delete this note?</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="default_string">Default</string>
    <string name="theme">Theme</string>
    <string name="confirm_logout">Logout of your account. Your notes won\'t be available offline.</string>
    <string name="logout_summary">Logging you out.</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_summary">Deleting your account will delete all your notes and all your information. This can not be undone.</string>
    <string name="deleted_note">Deleted note</string>
    <string name="undo">Undo</string>
    <string name="make_public">Made the note public</string>
    <string name="share_text">Share notes with Komment. \nLet\'s collaborate: </string>
    <string name="shared_notes">Shared Notes</string>
    <string name="note_already_public">This note is already public</string>
    <string name="make_private">Make private</string>
    <string name="note_not_public">This note isn\'t public.</string>
    <string name="missing_implementation">Not yet implemented.</string>
</resources>
