<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_folder"
            android:icon="@drawable/ic_folder"
            android:title="@string/folder" />
        <item
            android:title="@string/shared_notes"
            android:icon="@drawable/ic_share"
            android:id="@+id/nav_shared_notes"/>
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:title="@string/logout"/>
        </menu>
    </item>


</menu>