<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="General">
        <ListPreference
            android:key="theme_preference"
            android:title="@string/theme"
            android:summary="Choose a theme."
            android:entries="@array/theme"
            android:entryValues="@array/theme_data"/>
    </PreferenceCategory>


    <PreferenceCategory
        android:title="Notes">
        <CheckBoxPreference
            android:key="confirm_delete"
            android:title="Confirm delete"
            android:summary="When deleting a note ask always for confirmation." />
        <CheckBoxPreference
            android:title="Save notes offline"
            android:key="save_offline"
            android:summary="Keep a copy of every note offline."/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/account">
        <Preference
            android:key="delete_account"
            android:title="@string/delete"
            android:summary="Delete your account."/>
        <Preference
            android:title="Change Password"
            android:summary="Change the password of your account"/>
        <Preference
            android:key="logout"
            android:title="@string/logout"
            android:summary="@string/logout_summary"/>
    </PreferenceCategory>

</PreferenceScreen>