<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="176dp"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

    <ImageView
        android:layout_width="70dp"
        android:layout_height="68dp"
        android:contentDescription="@string/app_icon"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/ic_app_icon_foreground" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"/>

    <TextView
        android:id="@+id/username_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account" />

</LinearLayout>